ghc-4335c07/testsuite/tests/overloadedrecflds/should_fail/NoParent.hs
{-# LANGUAGE DuplicateRecordFields #-}
module NoParent (A(x)) where

data A = A
data B = B { x :: Int }
data C = C { x :: String }
